# brain-tumor-detection

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-image.yml
client/: APIrequest.py
notebooks/: client.ipynb  inference.ipynb  research.ipynb  train.ipynb
src/inference/: Dockerfile  app.py  conf.py  predict.py  schemas.py
src/train/: Dockerfile  config.yaml  train_model.py
tests/: test_api.py
